<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="13dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_foto_gunung"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/bromo"
            android:scaleType="fitXY"
            android:padding="4sp"/>

        <TextView
            android:id="@+id/nama_gunung_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nama_gunung"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:text="@string/lokasi"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/lokasi_tabel"
                    android:text="lokasi_detail"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:text="@string/ketinggian"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:text="ketinggian_detail"
                    android:id="@+id/ketinggial_tabel"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/desc_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/deskripsi"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_back_home"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/kembali_ke_daftar_gunung"/>

            <Button
                android:id="@+id/btn_look_maps"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/lihat_di_google_maps"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>